--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,173 +1,37 @@
 {
-    "editor.fontSize": 13,
-    "liveServer.settings.donotShowInfoMsg": true,
-    "git.autofetch": true,
-    "files.autoSave": "onFocusChange",
-    "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "git.enableSmartCommit": true,
-    "files.exclude": {
-        "**/.classpath": true,
-        "**/.project": true,
-        "**/.settings": true,
-        "**/.factorypath": true
-    },
-    "FSharp.inlayHints.typeAnnotations": false,
-    "FSharp.inlayHints.parameterNames": false,
-    "git.confirmSync": false,
-    "svelte.enable-ts-plugin": true,
-    "vsicons.dontShowNewVersionMessage": true,
-    "editor.stickyScroll.enabled": true,
-    "code-runner.executorMapByFileExtension": {
-
-        ".vb": "cd $dir && vbc /nologo $fileName && $dir$fileNameWithoutExt",
-        ".vbs": "cscript //Nologo",
-        ".scala": "scala",
-        ".jl": "julia",
-        ".cr": "crystal",
-        ".ml": "ocaml",
-        ".exs": "elixir",
-        ".hx": "haxe --cwd $dirWithoutTrailingSlash --run $fileNameWithoutExt",
-        ".rkt": "racket",
-        ".scm": "csi -script",
-        ".ahk": "autohotkey",
-        ".au3": "autoit3",
-        ".kt": "cd $dir && kotlinc $fileName -include-runtime -d $fileNameWithoutExt.jar && java -jar $fileNameWithoutExt.jar",
-        ".kts": "kotlinc -script",
-        ".dart": "dart",
-        ".pas": "cd $dir && fpc $fileName && $dir$fileNameWithoutExt",
-        ".pp": "cd $dir && fpc $fileName && $dir$fileNameWithoutExt",
-        ".d": "cd $dir && dmd $fileName && $dir$fileNameWithoutExt",
-        ".hs": "runhaskell",
-        ".nim": "nim compile --verbosity:0 --hints:off --run",
-        ".csproj": "dotnet run --project",
-        ".fsproj": "dotnet run --project",
-        ".lisp": "sbcl --script",
-        ".kit": "kitc --run",
-        ".v": "v run",
-        ".vsh": "v run",
-        ".sass": "sass --style expanded",
-        ".cu": "cd $dir && nvcc $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-        ".ring": "ring",
-        ".sml": "cd $dir && sml $fileName"
-    },
-    "code-runner.executorMap": {
-    
-
-        "javascript": "node",
-        "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
-        "c": "cd $dir && gcc $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-        "cpp": "cd $dir && g++ $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-        "objective-c": "cd $dir && gcc -framework Cocoa $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-        "php": "php",
-        "python": "python3 -u",
-        "perl": "perl",
-        "perl6": "perl6",
-        "ruby": "ruby",
-        "go": "go run",
-        "lua": "lua",
-        "groovy": "groovy",
-        "powershell": "powershell -ExecutionPolicy ByPass -File",
-        "bat": "cmd /c",
-        "shellscript": "bash",
-        "fsharp": "fsi",
-        "csharp": "scriptcs",
-        "vbscript": "cscript //Nologo",
-        "typescript": "ts-node",
-        "coffeescript": "coffee",
-        "scala": "scala",
-        "swift": "swift",
-        "julia": "julia",
-        "crystal": "crystal",
-        "ocaml": "ocaml",
-        "r": "Rscript",
-        "applescript": "osascript",
-        "clojure": "lein exec",
-        "haxe": "haxe --cwd $dirWithoutTrailingSlash --run $fileNameWithoutExt",
-        "rust": "cd $dir && rustc $fileName && $dir$fileNameWithoutExt",
-        "racket": "racket",
-        "scheme": "csi -script",
-        "ahk": "autohotkey",
-        "autoit": "autoit3",
-        "dart": "dart",
-        "pascal": "cd $dir && fpc $fileName && $dir$fileNameWithoutExt",
-        "d": "cd $dir && dmd $fileName && $dir$fileNameWithoutExt",
-        "haskell": "runhaskell",
-        "nim": "nim compile --verbosity:0 --hints:off --run",
-        "lisp": "sbcl --script",
-        "kit": "kitc --run",
-        "v": "v run",
-        "sass": "sass --style expanded",
-        "scss": "scss --style expanded",
-        "less": "cd $dir && lessc $fileName $fileNameWithoutExt.css",
-        "FortranFreeForm": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-        "fortran-modern": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-        "fortran_fixed-form": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-        "fortran": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-        "sml": "cd $dir && sml $fileName"
-    },
-    "editor.minimap.renderCharacters": false,
-    "editor.minimap.enabled": false,
-    "diffEditor.ignoreTrimWhitespace": false,
-    "editor.inlineSuggest.enabled": true,
+    "github.copilot.nextEditSuggestions.enabled": true,
+    "git.defaultCloneDirectory": "/Users/lukas/code",
+    "extensions.ignoreRecommendations": true,
+    "accessibility.dimUnfocused.enabled": true,
+    "window.customTitleBarVisibility": "windowed",
+    "editor.minimap.autohide": "mouseover",
     "github.copilot.enable": {
         "*": false,
         "plaintext": false,
         "markdown": false,
-        "scminput": false,
-        "yaml": false,
-        "c": false,
-        "ampl": false,
-        "python": false
+        "scminput": false
     },
-    "[python]": {
-        "editor.formatOnType": true
-    },
-    "FSharp.suggestGitignore": false,
-    "livereload.debug": true,
-    "livereload.applyImageLive": false,
-    "livereload.delayForUpdate": 200,
-    "python.autoComplete.extraPaths": [
-        "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages"
-    ],
-    "python.analysis.extraPaths": [
-        "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages"
-    ],
     "files.watcherExclude": {
         "**/.bloop": true,
-        "**/.metals": true,
-        "**/.ammonite": true
+        "**/.metals": true
     },
-    "explorer.fileNesting.patterns": {
-        "*.ts": "${capture}.js",
-        "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
-        "*.jsx": "${capture}.js",
-        "*.tsx": "${capture}.ts",
-        "tsconfig.json": "tsconfig.*.json",
-        "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
-        "*.fs": "${basename}.fsi, ${basename}.fs.js, ${basename}.fs.js.map",
-        "*.fsl": "${basename}.fsi, ${basename}.fs",
-        "*.fsy": "${basename}.fsi, ${basename}.fs",
-        "*.sqlite": "${capture}.${extname}-*",
-        "*.db": "${capture}.${extname}-*",
-        "*.sqlite3": "${capture}.${extname}-*",
-        "*.db3": "${capture}.${extname}-*",
-        "*.sdb": "${capture}.${extname}-*",
-        "*.s3db": "${capture}.${extname}-*"
-    },
-    "editor.lineNumbers": "relative",
-    "gitlens.codeLens.enabled": false,
+    "files.autoSave": "onFocusChange",
+    "workbench.secondarySideBar.defaultVisibility": "hidden",
     "metals.superMethodLensesEnabled": false,
-    "editor.fontFamily": "JetBrains Mono",
-    "files.associations": {
-        "*.cpp": "cpp"
+    "vim.smartRelativeLine": true,
+    "workbench.editorAssociations": {
+        "*.copilotmd": "vscode.markdown.preview.editor",
+        "*.pdf": "pdf.preview"
     },
-    "editor.lineHeight": 15,
-    "github.copilot.advanced": {},
-    "github.copilot.nextEditSuggestions.enabled": false,
-    "git.blame.editorDecoration.enabled": false,
-    "editor.gotoLocation.multipleDefinitions": "goto",
-    "[vue]": {
-        "editor.defaultFormatter": "Vue.volar"
-    },
+    "breadcrumbs.enabled": false,
+    "scm.diffDecorations": "gutter",
+    "editor.acceptSuggestionOnEnter": "off",
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": ["g", "s"],
+            "commands": [
+                "editor.action.revealDefinitionAside"
+            ]
+        }
+    ]
 }
