Add quickNotes toggle command to settings

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -32,6 +32,12 @@
             "commands": [
                 "editor.action.revealDefinitionAside"
             ]
-        }
+        },
+        {
+            "before": ["n"],
+            "commands": [
+                "quickNotes.toggle"
+            ]
+        },
     ]
 }
